chore: cleanup sonar code smells